# Tasks

./: .quickly  setup.py  tasks.desktop.in  u1db
data/glib-2.0/schemas/: gschemas.compiled  net.launchpad.tasks.gschema.xml
data/ui/: AboutTasksDialog.ui  NewTaskDialog.ui  PreferencesTasksDialog.ui  TasksWindow.ui  about_tasks_dialog.xml  new_task_dialog.xml  preferences_tasks_dialog.xml  tasks_window.xml
help/C/: index.page
tasks/: AboutTasksDialog.py  NewTaskDialog.py  PreferencesTasksDialog.py  TasksWindow.py  __init__.py  image_toggle.py  settings.py  store.py  task_details_pane.py  task_list_entry.py
tasks/couch/: database.py
tasks/models/: __init__.py  project.py  tag.py  task.py
tasks_lib/: AboutDialog.py  Builder.py  PreferencesDialog.py  Window.py  __init__.py  helpers.py  tasksconfig.py
tests/: test_example.py  test_lint.py
u1dbrepo/: .testr.conf  MANIFEST.in  Makefile  README  custom.supp  setup.py  sql_to_c.py  u1db-client  u1db-serve
u1dbrepo/cmake/Modules/: FindJSON.cmake  FindOAUTH.cmake  FindSqlite3.cmake
u1dbrepo/doc/: sqlite_schema.txt
u1dbrepo/html-docs/: Makefile  conf.py  conflicts.rst  high-level-api.rst  index.rst  philosophy.rst  quickstart.rst  reference-implementation.rst
u1dbrepo/include/u1db/: compat.h  u1db.h  u1db_http_internal.h  u1db_internal.h  u1db_vectorclock.h
u1dbrepo/src/: CMakeLists.txt  mkstemp_compat.c  u1db.c  u1db_http_sync_target.c  u1db_query.c  u1db_sync_target.c  u1db_uuid.c  u1db_vectorclock.c
u1dbrepo/u1db/: __init__.py  errors.py  query_parser.py  sync.py
u1dbrepo/u1db/backends/: __init__.py  (+3 more)
u1dbrepo/u1todo/: test_u1todo.py  u1todo.py  u1todo.ui  ui.py
(+27 files in other folders)
